new/edit broken due to habtm form addition

--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,5 +1,9 @@
+<h1>Ingredients</h1>
 <br>
-<% ingredients.each do |ingredient| %>
+<% @ingredients.each do |ingredient| %>
   <%= ingredient.name %>
+  <% ingredient.recipes.map {|i| i.name}.join(',') %>
 <br>
 <% end %>  
+
+
