--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -15,8 +15,13 @@
   <%= f.label :instruction %>
   <%= f.text_field :instruction %>
   <br>
+  <div class="field">
+  <%= collection_check_boxes(:recipe, :ingredient_ids, @ingredients, :id, :name) %>
+</div>
+  <br>
+
   <%= f.submit 'New recipe' %>
-
-
+  <br>
+  
 
   <% end %>
