--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,5 +6,9 @@
 <br>
 <p> <%= @recipe.instruction %> </p>
 
+<p>
+  <strong>Ingredients:</strong>
+  <%= @recipe.ingredients.map {|i| i.name}.join(',') %>
+</p>
 <%= button_to('Delete Recipe', recipe_path(@recipe), method: :delete, data: {confirm: 'Delete? Are you sure?'}) %>
 <%= link_to('Edit Recipe', edit_recipe_path(@recipe)) %>
