--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,7 @@
-<h1> Hello </h1>
+<h1> Recipes By Category </h1>
 <%= link_to("New Category", new_category_path)%>
 <br>
 <% @categories.each do |category|%>
-  <%= category.name %>
-  <%= link_to("Recipes", category_path(category)) %>
+  <%= link_to("#{category.name}", category_path(category)) %>
 <br>
 <% end %>
