--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,9 @@
+
 <h1> <%= @category.name.capitalize %> </h1>
+<%@recipes.each do |r| %>
+<%= r.name %>
+<%= link_to "Recipe", recipe_path(r)%>
+<%end%>
 <%= button_to('Delete Category', category_path(@category), method: :delete, data: {confirm: 'Delete? Are you sure?'}) %>
 <%= link_to('Rename Category', edit_category_path(@category)) %>
+
