--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,6 +1,8 @@
-<%= @ingredient.name %>
+<h1>  <%= @ingredient.name %> </h1>
 
 <p>
   <strong>Recipes:</strong>
   <%= @ingredient.recipes.map {|r| r.name}.sort.join(',') %>
 </p>
+<%= button_to("Delete Ingredient" , ingredient_path(@ingredient), method: :delete, data: {confirm: 'Delete? Are you sure?'})%>
+<%= link_to("Rename Ingredient", edit_ingredient_path(@ingredient))%>
