--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to "Home", root_path %>
+<%= link_to "Recipes By Category", categories_path %>
+<%= link_to "Recipes By Ingredient", ingredients_path %>
 <%= yield %>
 
 </body>
